Work on Transform and Render Components

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,20 +18,20 @@ SET(CMAKE_CXX_FLAGS "-std=c++11")
 
 add_executable(techdemo
 	source/main.cpp
-	source/stb_image.cpp
-	
+	source/stb_image.cpp	
 	libraries/glad/src/glad.c
 	source/Component.cpp
-	source/Mesh.cpp
-	source/Model.cpp
 	source/OpenGL.cpp
 	source/GameObject.cpp
 	source/Skybox.cpp
-	
+	source/Shader.cpp
 	source/CameraManager.cpp
 	source/Transform.cpp
 	source/Camera.cpp
 	source/SceneManager.cpp
+	source/Renderer.cpp
+	source/Material.cpp
+	source/Mesh.cpp
 )
 
 target_link_libraries(techdemo assimp glfw3) 
