Added multiple lights to shadow + started input class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,7 @@ add_executable(techdemo
 	source/LightManager.cpp
 	source/Light.cpp
 	source/DirectionalLight.cpp
+	source/Input.cpp
 )
 
 target_link_libraries(techdemo assimp glfw3) 
